--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@babel/runtime": "^7.6.0",
     "@types/clear": "^0.1.0",
     "@types/node": "^12.7.10",
+    "@types/uniqid": "^4.1.3",
     "clear": "^0.1.0",
     "node-fetch": "^2.6.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.6.3",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
