--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "slurp",
-  "version": "1.0.0",
+  "name": "super-train-js",
+  "version": "0.0.11",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tsc": "tsc && node ./build/index.js"
+    "build":"tsc"
   },
   "keywords": [],
   "author": "",
@@ -15,9 +15,9 @@
     "@types/node": "^12.7.10",
     "@types/uniqid": "^4.1.3",
     "clear": "^0.1.0",
+    "express": "^4.17.1",
     "node-fetch": "^2.6.0",
-    "typescript": "^3.6.3",
-    "uniqid": "^5.0.3"
+    "typescript": "^3.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
